Update package.json to change version to 1.0.1 and update publisher name to TechSurgeon

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "mybbbridge",
 	"displayName": "MyBBBridge",
 	"description": "VSCode extension to edit and create MyBB themes and templates.",
-	"version": "1.0.0",
-	"publisher": "Paxocial",
+	"version": "1.0.1",
+	"publisher": "TechSurgeon",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/paxocial/vscode-mybbbridge.git"
